# sh-support

./: .gitignore  .rustfmt.toml  Cargo.toml  Readme.md
src/: deck.rs  error.rs  information.rs  main.rs  policy.rs  secret_role.rs
src/players/: callback_vector.rs  filter_engine.rs  game_configuration.rs  mod.rs  tree.rs
