[package]
name = "sh-support"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repl-rs = "^0.2"
itertools = "^0.10"
contracts = "^0.6"
strsim = "^0.10"
arboard = "^2"
image = { version = "^0.24", default-features = false, features = ["bmp", "png"] }
cached = "^0.37"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
readonly = "0.2"

dialoguer = "0.10"
